--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,11 @@
 PyQt6>=6.5.2
 PyQt6-Qt6>=6.5.2
 PyQt6-sip>=13.5.2
+PyQt6-Charts>=6.5.2
+PyQt6-Charts-Qt6>=6.5.2
 
 # Netzwerk
 requests>=2.31.0
-
-# Datenbank
-sqlite3
 
 # Utility
 python-dateutil>=2.8.2
